<resources>
    <string name="app_name">Submission Architecture Component</string>
    <string name="tab_movie">MOVIES</string>
    <string name="tab_tv_show">TV SHOWS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>